--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,13 +3,13 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{
+fuller2023croma,
+title={{CROMA}: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders},
+author={Anthony Fuller and Koreen Millard and James R Green},
+booktitle={Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)},
+year={2023},
+url={https://openreview.net/forum?id=ezqI5WgGvY}
 }
 
 @article{einstein1950meaning,
