--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@ title={{CROMA}: Remote Sensing Representations with Contrastive Radar-Optical Ma
 author={Anthony Fuller and Koreen Millard and James R Green},
 booktitle={Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)},
 year={2023},
-url={https://openreview.net/forum?id=ezqI5WgGvY}
+url={https://openreview.net/forum?id=ezqI5WgGvY},
+selected={true}
 }
 
 @article{einstein1950meaning,
