--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,82 +4,50 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{
-fuller2023croma,
-title={{CROMA}: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders},
-author={Anthony Fuller and Koreen Millard and James R Green},
-booktitle={Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)},
-year={2023},
-url={https://openreview.net/forum?id=ezqI5WgGvY},
-selected={true}
+    fuller2023croma,
+    title={{CROMA}: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders},
+    author={Anthony Fuller and Koreen Millard and James R Green},
+    booktitle={Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)},
+    year={2023},
+    url={https://openreview.net/forum?id=ezqI5WgGvY},
+    selected={true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{SatViT,
+    title        = {{SatViT: Pretraining Transformers for Earth Observation}},
+    author       = {Fuller, Anthony and Millard, Koreen and Green, James R.},
+    year         = {2022},
+    journal      = {IEEE Geoscience and Remote Sensing Letters},
+    selected={true}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{SatViT-V2,
+    title        = {{Transfer Learning with Pretrained Remote Sensing Transformers}},
+    author       = {Anthony Fuller and Koreen Millard and James R. Green},
+    year         = {2022},
+    journal      = {CoRR},
+    volume       = {abs/2209.14969}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{kyrollos2023under,
+  title={Under the Cover Infant Pose Estimation Using Multimodal Data},
+  author={Kyrollos, Daniel G and Fuller, Anthony and Greenwood, Kim and Harrold, JoAnn and Green, James R},
+  journal={IEEE Transactions on Instrumentation Measurement},
+  volume={72},
+  pages={3244220},
+  year={2023}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{gunay2016detecting,
+  title={Detecting occupants’ presence in office spaces: a case study},
+  author={Gunay, H Burak and Fuller, Anthony and Beausoleil-Morrison, Ian}
+journal={eSim},
+  year={2016}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{o2018picture,
+  title={A picture is worth a thousand words: Smartphone photograph-based surveys for collecting data on office occupant adaptive opportunities},
+  author={O'Brien, William and Fuller, Anthony and Schweiker, Marcel and Day, Julia},
+journal={7th International Building Physics Conference},
+  year={2018}
 }
