--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,7 +40,7 @@
 
 @article{gunay2016detecting,
   title={Detecting occupants’ presence in office spaces: a case study},
-  author={Gunay, H Burak and Fuller, Anthony and Beausoleil-Morrison, Ian}
+  author={Gunay, H Burak and Fuller, Anthony and Beausoleil-Morrison, Ian},
 journal={eSim},
   year={2016}
 }
