--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
     booktitle={Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)},
     year={2023},
     url={https://openreview.net/forum?id=ezqI5WgGvY},
+    preview={NeurIPS_logo_stacked.png},
     selected={true}
 }
 
