--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,16 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{
+    fuller2024lookhere,
+    title={LookHere: Vision Transformers with Directed Attention Generalize and Extrapolate},
+    author={Anthony Fuller and Daniel G. Kyrollos and Yousef Yassin and James R Green},
+    booktitle={Thirty-eighth Conference on Neural Information Processing Systems (NeurIPS)},
+    year={2024},
+    url={https://openreview.net/forum?id=o7DOGbZeyP},
+    selected={true}
+}
+
+@inproceedings{
     fuller2023croma,
     title={{CROMA}: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders},
     author={Anthony Fuller and Koreen Millard and James R Green},
