--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,13 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{tseng2025galileo,
+  title={Galileo: Learning Global and Local Features in Pretrained Remote Sensing Models},
+  author={Tseng, Gabriel and Fuller, Anthony and Reil, Marlena and Herzog, Henry and Beukema, Patrick and Bastani, Favyen and Green, James R and Shelhamer, Evan and Kerner, Hannah and Rolnick, David},
+  journal={ICML 2025},
+  year={2025}
+}
+
 @inproceedings{
     fuller2024lookhere,
     title={LookHere: Vision Transformers with Directed Attention Generalize and Extrapolate},
