--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,11 +3,26 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{tseng2025galileo,
-  title={Galileo: Learning Global and Local Features in Pretrained Remote Sensing Models},
-  author={Tseng, Gabriel and Fuller, Anthony and Reil, Marlena and Herzog, Henry and Beukema, Patrick and Bastani, Favyen and Green, James R and Shelhamer, Evan and Kerner, Hannah and Rolnick, David},
-  journal={ICML 2025},
-  year={2025}
+@misc{fuller2025simplerfastvisiontransformers,
+      title={Simpler Fast Vision Transformers with a Jumbo CLS Token}, 
+      author={Anthony Fuller and Yousef Yassin and Daniel G. Kyrollos and Evan Shelhamer and James R. Green},
+      year={2025},
+      eprint={2502.15021},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2502.15021}, 
+      selected={true}
+}
+
+@misc{tseng2025galileolearninggloballocal,
+      title={Galileo: Learning Global and Local Features in Pretrained Remote Sensing Models}, 
+      author={Gabriel Tseng and Anthony Fuller and Marlena Reil and Henry Herzog and Patrick Beukema and Favyen Bastani and James R. Green and Evan Shelhamer and Hannah Kerner and David Rolnick},
+      year={2025},
+      eprint={2502.09356},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2502.09356}, 
+     selected={true}
 }
 
 @inproceedings{
