--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,22 +14,19 @@
       selected={true}
 }
 
-@misc{tseng2025galileolearninggloballocal,
+@inproceedings{tseng2025galileolearninggloballocal,
       title={Galileo: Learning Global and Local Features in Pretrained Remote Sensing Models}, 
       author={Gabriel Tseng and Anthony Fuller and Marlena Reil and Henry Herzog and Patrick Beukema and Favyen Bastani and James R. Green and Evan Shelhamer and Hannah Kerner and David Rolnick},
-      year={2025},
-      eprint={2502.09356},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2502.09356}, 
-     selected={true}
+    booktitle={ICML},
+    year={2025},
+    selected={true}
 }
 
 @inproceedings{
     fuller2024lookhere,
     title={LookHere: Vision Transformers with Directed Attention Generalize and Extrapolate},
     author={Anthony Fuller and Daniel G. Kyrollos and Yousef Yassin and James R Green},
-    booktitle={Thirty-eighth Conference on Neural Information Processing Systems (NeurIPS)},
+    booktitle={NeurIPS},
     year={2024},
     url={https://openreview.net/forum?id=o7DOGbZeyP},
     selected={true}
@@ -39,7 +36,7 @@
     fuller2023croma,
     title={{CROMA}: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders},
     author={Anthony Fuller and Koreen Millard and James R Green},
-    booktitle={Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)},
+    booktitle={NeurIPS},
     year={2023},
     url={https://openreview.net/forum?id=ezqI5WgGvY},
     selected={true}
@@ -50,7 +47,6 @@
     author       = {Fuller, Anthony and Millard, Koreen and Green, James R.},
     year         = {2022},
     journal      = {IEEE Geoscience and Remote Sensing Letters},
-    selected={true}
 }
 
 @article{SatViT-V2,
