--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,42 +3,37 @@
 
 @string{aps = {American Physical Society,}}
 
-@misc{fuller2025simplerfastvisiontransformers,
+@article{fuller2025simplerfastvisiontransformers,
       title={Simpler Fast Vision Transformers with a Jumbo CLS Token}, 
       author={Anthony Fuller and Yousef Yassin and Daniel G. Kyrollos and Evan Shelhamer and James R. Green},
       year={2025},
-      eprint={2502.15021},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2502.15021}, 
+      journal={arxiv preprint}, 
       selected={true}
 }
 
-@inproceedings{tseng2025galileolearninggloballocal,
+@article{tseng2025galileolearninggloballocal,
       title={Galileo: Learning Global and Local Features in Pretrained Remote Sensing Models}, 
       author={Gabriel Tseng and Anthony Fuller and Marlena Reil and Henry Herzog and Patrick Beukema and Favyen Bastani and James R. Green and Evan Shelhamer and Hannah Kerner and David Rolnick},
-    booktitle={ICML},
+    journal{ICML},
     year={2025},
     selected={true}
 }
 
-@inproceedings{
+@article{
     fuller2024lookhere,
     title={LookHere: Vision Transformers with Directed Attention Generalize and Extrapolate},
     author={Anthony Fuller and Daniel G. Kyrollos and Yousef Yassin and James R Green},
-    booktitle={NeurIPS},
+    journal={NeurIPS},
     year={2024},
-    url={https://openreview.net/forum?id=o7DOGbZeyP},
     selected={true}
 }
 
-@inproceedings{
+@article{
     fuller2023croma,
     title={{CROMA}: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders},
     author={Anthony Fuller and Koreen Millard and James R Green},
-    booktitle={NeurIPS},
+    journal={NeurIPS},
     year={2023},
-    url={https://openreview.net/forum?id=ezqI5WgGvY},
     selected={true}
 }
 
