--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
 @article{tseng2025galileolearninggloballocal,
       title={Galileo: Learning Global and Local Features in Pretrained Remote Sensing Models}, 
       author={Gabriel Tseng and Anthony Fuller and Marlena Reil and Henry Herzog and Patrick Beukema and Favyen Bastani and James R. Green and Evan Shelhamer and Hannah Kerner and David Rolnick},
-    journal{ICML},
+    journal={ICML},
     year={2025},
     selected={true}
 }
