--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{lw,
+      title={LookWhere? Efficient Visual Recognition by Learning Where to Look and What to See from Self-Supervision}, 
+      author={Anthony Fuller and Yousef Yassin and Junfeng Wen and Tarik Ibrahim and Daniel G. Kyrollos and James R. Green and Evan Shelhamer},
+      year={2025},
+      journal={arxiv preprint}, 
+      selected={true}
+}
+
 @article{fuller2025simplerfastvisiontransformers,
       title={Simpler Fast Vision Transformers with a Jumbo CLS Token}, 
       author={Anthony Fuller and Yousef Yassin and Daniel G. Kyrollos and Evan Shelhamer and James R. Green},
